# speech-prep

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
examples/: vad_detect.rs
src/: buffer.rs  converter.rs  error.rs  fixtures.rs  format.rs  lib.rs  monitoring.rs  pipeline.rs  time.rs  types.rs
src/chunker/: analysis.rs  config.rs  mod.rs  overlap.rs  planner.rs  segments.rs  tests.rs  types.rs
src/decoder/: mixer.rs  mod.rs  resampler.rs  types.rs  wav.rs
src/preprocessing/: artifacts.rs  dc_highpass.rs  mod.rs  noise_reduction.rs  normalization.rs  quality.rs
src/vad/: config.rs  detector.rs  metrics.rs  mod.rs
tests/: helpers.rs  integration_tests.rs  performance_contracts.rs  property_tests.rs
tests/integration/: format_variability.rs  preprocessing_pipeline.rs
